# Processing/app.py
@@ -8,6 +8,7 @@ from base import Base
 from sqlalchemy import create_engine
 from flask_cors import CORS, cross_origin
 from sqlalchemy.orm import sessionmaker
+from health.app import check_data
 from stats import Stats
 from datetime import datetime
 from uuid import uuid1
@@ -49,6 +50,8 @@ logger.info("Log Conf File: %s" % log_conf_file)
 
 create_database()
 
+def get_health():
+    return 200
 
 DB_ENGINE = create_engine("sqlite:///%s" % app_config["datastore"]["filename"]) 
 Base.metadata.bind = DB_ENGINE 
