# Reciever/openapi.yml
@@ -63,6 +63,18 @@ paths:
             schema:
               $ref: '#/components/schemas/Referee'
         description: referee able to officiate game
+
+  /health:
+    get:
+      summary: gets service health status
+      operationId: app.get_health
+      description: gets service health status
+      responses:
+        '200':
+          description: Successfully returned service status
+        '404':
+          description: service down
+
 components:
   schemas:
     Scheduler:
